--- a/Troc Livres/Controller/ContactViewCell.xib
+++ b/Troc Livres/Controller/ContactViewCell.xib
@@ -20,7 +20,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="307" height="96.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="userIcon" translatesAutoresizingMaskIntoConstraints="NO" id="HdT-jJ-cwJ">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image-User" translatesAutoresizingMaskIntoConstraints="NO" id="HdT-jJ-cwJ">
                         <rect key="frame" x="20" y="7" width="35" height="35"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="HdT-jJ-cwJ" secondAttribute="height" id="Gnr-xT-xea"/>
@@ -52,7 +52,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="userIcon" width="35" height="35"/>
+        <image name="Image-User" width="35" height="35"/>
         <namedColor name="Color_chatSender">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
