--- a/Troc Livres/Controller/ContactViewCell.xib
+++ b/Troc Livres/Controller/ContactViewCell.xib
@@ -30,7 +30,7 @@
                         <rect key="frame" x="75" y="12.5" width="204" height="24"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                         <nil key="textColor"/>
-                        <color key="highlightedColor" name="Color_chatSender"/>
+                        <color key="highlightedColor" name="Color-Button"/>
                     </label>
                 </subviews>
                 <constraints>
@@ -38,8 +38,8 @@
                     <constraint firstItem="HdT-jJ-cwJ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="HFU-rg-XEE"/>
                     <constraint firstItem="HdT-jJ-cwJ" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="JHm-Ru-FcM"/>
                     <constraint firstItem="Ymm-Ge-fWt" firstAttribute="leading" secondItem="HdT-jJ-cwJ" secondAttribute="trailing" constant="20" id="Vnk-tv-NVY"/>
-                    <constraint firstItem="Ymm-Ge-fWt" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="aRn-en-Jci"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Ymm-Ge-fWt" secondAttribute="trailing" constant="20" id="fgX-UZ-8hB"/>
+                    <constraint firstItem="Ymm-Ge-fWt" firstAttribute="centerY" secondItem="HdT-jJ-cwJ" secondAttribute="centerY" id="zg9-9v-BdG"/>
                     <constraint firstItem="HdT-jJ-cwJ" firstAttribute="width" secondItem="H2p-sc-9uM" secondAttribute="width" multiplier="1:4" id="ztF-Lq-ZsH"/>
                 </constraints>
             </tableViewCellContentView>
@@ -53,8 +53,8 @@
     </objects>
     <resources>
         <image name="Image-User" width="35" height="35"/>
-        <namedColor name="Color_chatSender">
-            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Color-Button">
+            <color red="0.0" green="0.67843137254901964" blue="0.70980392156862748" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
