--- a/Troc Livres/View/Base.lproj/Welcome.storyboard
+++ b/Troc Livres/View/Base.lproj/Welcome.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="VrO-Uj-hRg">
-                                <rect key="frame" x="41.5" y="64" width="331" height="482"/>
+                                <rect key="frame" x="41.5" y="64" width="331" height="483"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="jEl-Hw-Una">
                                         <rect key="frame" x="0.0" y="0.0" width="331" height="57"/>
@@ -45,57 +45,22 @@
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="Kfg-d4-8XE">
-                                        <rect key="frame" x="0.0" y="161" width="331" height="39"/>
-                                        <subviews>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="mlm-B0-Q7I">
-                                                <rect key="frame" x="0.0" y="0.0" width="160.5" height="39"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xwA-MY-kRC">
-                                                        <rect key="frame" x="0.0" y="0.0" width="160.5" height="36"/>
-                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                                        <state key="normal" title="Inscription">
-                                                            <color key="titleColor" name="Color-Button"/>
-                                                        </state>
-                                                        <connections>
-                                                            <action selector="registerButtonPressed:" destination="DnR-uh-rGe" eventType="touchUpInside" id="qZe-cL-AXn"/>
-                                                        </connections>
-                                                    </button>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iHw-0X-RM3" userLabel="Line">
-                                                        <rect key="frame" x="0.0" y="36" width="160.5" height="3"/>
-                                                        <color key="backgroundColor" name="Color-Button"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="3" id="y1W-MP-JCb"/>
-                                                        </constraints>
-                                                    </view>
-                                                </subviews>
-                                            </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9rE-oH-kYB">
-                                                <rect key="frame" x="170.5" y="0.0" width="160.5" height="39"/>
-                                                <subviews>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CCc-DH-GhI">
-                                                        <rect key="frame" x="0.0" y="0.0" width="160.5" height="36"/>
-                                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                                        <state key="normal" title="Connexion">
-                                                            <color key="titleColor" name="Color-Button"/>
-                                                        </state>
-                                                        <connections>
-                                                            <action selector="loginButtonPressed:" destination="DnR-uh-rGe" eventType="touchUpInside" id="cit-w5-ate"/>
-                                                        </connections>
-                                                    </button>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cAZ-nv-vuZ" userLabel="Line">
-                                                        <rect key="frame" x="0.0" y="36" width="160.5" height="3"/>
-                                                        <color key="backgroundColor" name="Color-Button"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="3" id="Z9c-XD-IHe"/>
-                                                        </constraints>
-                                                    </view>
-                                                </subviews>
-                                            </stackView>
-                                        </subviews>
-                                    </stackView>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="oF1-Ju-YN4">
+                                        <rect key="frame" x="0.0" y="161" width="331" height="41"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="ZUZ-Zv-q5y"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="Inscription"/>
+                                            <segment title="Connexion"/>
+                                        </segments>
+                                        <color key="tintColor" name="Color-Button"/>
+                                        <connections>
+                                            <action selector="segmentedControlValueChanged:" destination="DnR-uh-rGe" eventType="valueChanged" id="9ZA-9V-Xae"/>
+                                        </connections>
+                                    </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="KNi-5F-glf">
-                                        <rect key="frame" x="0.0" y="240" width="331" height="162"/>
+                                        <rect key="frame" x="0.0" y="241" width="331" height="162"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="61M-xM-Y1f">
                                                 <rect key="frame" x="0.0" y="0.0" width="331" height="122"/>
@@ -180,7 +145,7 @@
                                         </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJ1-Nq-6Nf" customClass="CustomButton" customModule="Troc_Livres" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="442" width="331" height="40"/>
+                                        <rect key="frame" x="0.0" y="443" width="331" height="40"/>
                                         <color key="backgroundColor" name="Color-Button"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="Rnw-Ch-HAB"/>
@@ -207,9 +172,8 @@
                     <connections>
                         <outlet property="emailTextField" destination="zgE-rE-ubw" id="KSM-tV-Jvi"/>
                         <outlet property="forgotPasswordButton" destination="hXp-8h-rMt" id="cIM-7j-sZA"/>
-                        <outlet property="loginLine" destination="cAZ-nv-vuZ" id="740-Bb-HWb"/>
                         <outlet property="passwordTextField" destination="GDD-BL-2vr" id="qBT-Gq-kJD"/>
-                        <outlet property="registerLine" destination="iHw-0X-RM3" id="gaZ-yz-Lr2"/>
+                        <outlet property="segmentedControl" destination="oF1-Ju-YN4" id="TSN-SP-pKX"/>
                         <outlet property="textFieldsView" destination="61M-xM-Y1f" id="BkS-lc-HRT"/>
                         <outlet property="usernameLine" destination="UXH-Ks-yVh" id="HZL-Ew-zQm"/>
                         <outlet property="usernameTextField" destination="Dzl-Uw-Sxa" id="Fui-eR-xro"/>
