add barcode scanner put book search and result in the same view

--- a/Troc Livres/View/Base.lproj/Welcome.storyboard
+++ b/Troc Livres/View/Base.lproj/Welcome.storyboard
@@ -68,7 +68,7 @@
                                                     <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="YAo-Gl-7zH">
                                                         <rect key="frame" x="0.0" y="0.0" width="331" height="122"/>
                                                         <subviews>
-                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nom d'utilisateur" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dzl-Uw-Sxa" customClass="customTextField" customModule="Troc_Livres" customModuleProvider="target">
+                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nom d'utilisateur" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dzl-Uw-Sxa" customClass="CustomTextField" customModule="Troc_Livres" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="0.0" width="331" height="40"/>
                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
@@ -88,7 +88,7 @@
                                                                     <constraint firstAttribute="height" constant="1" id="Uvp-gT-m2V"/>
                                                                 </constraints>
                                                             </view>
-                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="E-mail" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="zgE-rE-ubw" customClass="customTextField" customModule="Troc_Livres" customModuleProvider="target">
+                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="E-mail" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="zgE-rE-ubw" customClass="CustomTextField" customModule="Troc_Livres" customModuleProvider="target">
                                                                 <rect key="frame" x="0.0" y="41" width="331" height="40"/>
                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                 <constraints>
