--- a/Troc Livres/View/Base.lproj/Welcome.storyboard
+++ b/Troc Livres/View/Base.lproj/Welcome.storyboard
@@ -39,14 +39,8 @@
                                             </label>
                                         </subviews>
                                     </stackView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Echangez des livres autour de vous !" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aPR-pR-s8A">
-                                        <rect key="frame" x="0.0" y="97" width="331" height="24"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="oF1-Ju-YN4">
-                                        <rect key="frame" x="0.0" y="161" width="331" height="41"/>
+                                        <rect key="frame" x="0.0" y="97" width="331" height="41"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="ZUZ-Zv-q5y"/>
                                         </constraints>
@@ -60,7 +54,7 @@
                                         </connections>
                                     </segmentedControl>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="KNi-5F-glf">
-                                        <rect key="frame" x="0.0" y="241" width="331" height="162"/>
+                                        <rect key="frame" x="0.0" y="177" width="331" height="162"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="61M-xM-Y1f">
                                                 <rect key="frame" x="0.0" y="0.0" width="331" height="122"/>
@@ -145,7 +139,7 @@
                                         </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MJ1-Nq-6Nf" customClass="CustomButton" customModule="Troc_Livres" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="443" width="331" height="40"/>
+                                        <rect key="frame" x="0.0" y="379" width="331" height="40"/>
                                         <color key="backgroundColor" name="Color-Button"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="Rnw-Ch-HAB"/>
@@ -158,6 +152,12 @@
                                             <action selector="validateButtonPressed:" destination="DnR-uh-rGe" eventType="touchUpInside" id="5Fh-ck-aCK"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Echangez des livres autour de vous !" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aPR-pR-s8A">
+                                        <rect key="frame" x="0.0" y="459" width="331" height="24"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                             </stackView>
                         </subviews>
@@ -195,11 +195,11 @@
         </scene>
     </scenes>
     <resources>
-        <namedColor name="Color-LightGray">
-            <color red="0.83921568627450982" green="0.83921568627450982" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="Color-Button">
-            <color red="0.0" green="0.67843137254901964" blue="0.70980392156862748" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="Color-LightGray">
+            <color red="0.93333333333333335" green="0.93333333333333335" blue="0.93333333333333335" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
