--- a/Troc Livres/View/Cells/BookViewCell.xib
+++ b/Troc Livres/View/Cells/BookViewCell.xib
@@ -14,36 +14,36 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="BookViewCell" customModule="Troc_Livres" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="482" height="198"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="290" id="KGk-i7-Jjw" customClass="BookViewCell" customModule="Troc_Livres" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="575" height="290"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="482" height="197.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="575" height="289.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RDk-0b-XqV">
-                        <rect key="frame" x="8" y="3" width="466" height="69.5"/>
+                        <rect key="frame" x="8" y="3" width="559" height="283.5"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="sY3-CT-4nE">
-                                <rect key="frame" x="8" y="8" width="450" height="53.5"/>
+                                <rect key="frame" x="8" y="8" width="543" height="267.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image-NoBookCover" translatesAutoresizingMaskIntoConstraints="NO" id="sTD-yT-Aoq">
-                                        <rect key="frame" x="0.0" y="15.5" width="16" height="22.5"/>
+                                        <rect key="frame" x="0.0" y="2" width="186.5" height="263.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="sTD-yT-Aoq" secondAttribute="height" multiplier="21:29.7" id="ohW-ke-tO7"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="k4s-hp-ozX">
-                                        <rect key="frame" x="36" y="0.0" width="414" height="53.5"/>
+                                        <rect key="frame" x="206.5" y="107" width="336.5" height="53.5"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumFontSize="15" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0lj-9w-hIl">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="24"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="336.5" height="24"/>
                                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumFontSize="14" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Bju-cR-DyV">
-                                                <rect key="frame" x="0.0" y="32" width="414" height="21.5"/>
+                                                <rect key="frame" x="0.0" y="32" width="336.5" height="21.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -78,7 +78,7 @@
                 <outlet property="bookImage" destination="sTD-yT-Aoq" id="50E-2a-XVq"/>
                 <outlet property="bookTitle" destination="0lj-9w-hIl" id="rHI-z4-OKD"/>
             </connections>
-            <point key="canvasLocation" x="114.49275362318842" y="127.23214285714285"/>
+            <point key="canvasLocation" x="180.43478260869566" y="158.03571428571428"/>
         </tableViewCell>
     </objects>
     <resources>
