Add push notifications Code optimization

--- a/Troc Livres/View/Base.lproj/Main.storyboard
+++ b/Troc Livres/View/Base.lproj/Main.storyboard
@@ -855,7 +855,7 @@ Appuyez sur + pour en ajouter.</string>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="QcK-f5-ygN"/>
-        <segue reference="xWl-Ga-Lgh"/>
+        <segue reference="D3n-3N-zZh"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" name="Color-Button"/>
 </document>
